--- a/.ebextensions/phantom.config
+++ b/.ebextensions/phantom.config
@@ -1,6 +1,2 @@
 sources:
-    /usr/local/bin: https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
-commands:
-    set_path:
-        test: test ! -f /opt/elasticbeanstalk/.post-provisioning-complete
-        command: echo 'export PATH=$PATH:/usr/local/bin/' >> /root/.bash_profile
+    /bin: https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
