--- a/.ebextensions/phantom.config
+++ b/.ebextensions/phantom.config
@@ -1,2 +1,6 @@
 sources:
     /bin: https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
+commands:
+    set_path:
+        test: test ! -f /opt/elasticbeanstalk/.post-provisioning-complete
+        command: echo 'PATH=$PATH:/bin/phantomjs-2.1.1-linux-x86_64/bin' >> /root/.bash_profile
