--- a/.ebextensions/phantom.config
+++ b/.ebextensions/phantom.config
@@ -3,4 +3,4 @@ sources:
 commands:
     set_path:
         test: test ! -f /opt/elasticbeanstalk/.post-provisioning-complete
-        command: echo 'PATH=$PATH:/bin/phantomjs-2.1.1-linux-x86_64/bin' >> /root/.bash_profile
+        command: echo 'export PATH=$PATH:/bin/phantomjs-2.1.1-linux-x86_64/bin' >> /root/.bash_profile
